--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-router-hash-link": "^2.4.3",
     "sass": "^1.66.1"
   },
   "devDependencies": {
